--- a/planetarium/index.html
+++ b/planetarium/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>planetarium</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <div class="planets">
@@ -25,6 +26,6 @@
             <p class="bio"></p>
         </div>
     </div>
-    
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
