--- a/planetarium/index.html
+++ b/planetarium/index.html
@@ -23,6 +23,7 @@
             <h6 class="body">PLANET</h6>
             <h1 class="name"></h1>
             <h5 class="moons"></h5>
+            <h5 class="gravity"></h5>
             <p class="bio"></p>
         </div>
     </div>
